unpackaged/main/default/objects/pse__Create_Project_Personal__c/pse__Create_Project_Personal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that are applied when creating a project from an opportunity or template, or when adding objects from another project.</description>
    <label>Create Project Personal</label>
</CustomObject>