unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Hide_Resource_Request_Skills__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Resource_Request_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, hides skills in the Add Resource Requests from Template component.</description>
    <inlineHelpText>When selected, hides skills in the Add Resource Requests from Template component.</inlineHelpText>
    <label>Hide Resource Request Skills</label>
    <type>Checkbox</type>
</CustomField>