unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_and_Template_Proj_Budget_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_and_Template_Proj_Budget_Fieldset__c</fullName>
    <defaultValue>'CreateProjectFromOppAndTempBudgetColumns'</defaultValue>
    <description>The API name of a field set used by the Budget object. This field set defines the budget fields that are editable during creation of a project, including when creating a project from an opportunity or from a template.</description>
    <inlineHelpText>API name of a field set used by the Budget object. Fields in this set define the editable fields in the Budget Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
    <label>Budget Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>