unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_and_Template_Proj_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_and_Template_Proj_Fieldset__c</fullName>
    <defaultValue>'createProjectFromOppAndTempProjColumns'</defaultValue>
    <description>The API name of a field set used by the Project object. This field set defines the project fields that are editable when project details are displayed during creation of a project, including when creating a project from an opportunity or from a template.</description>
    <inlineHelpText>API name of a field set used by the Project object. Fields in this set define the editable fields in the Project Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
    <label>Project Details Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>