unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_Product_Milestone_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_Product_Milestone_Fieldset__c</fullName>
    <description>The API name of a field set used by the Milestone object. This field set defines the milestone from opportunity product columns that are editable during creation of a project from an opportunity when not using a template. No default field set is defined.</description>
    <inlineHelpText>The API name of a field set used by the Milestone object. Fields in this set define the columns in the Milestone from Opportunity Products section on the Create Project page.</inlineHelpText>
    <label>Milestone Opp Product (Opp) Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>