unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_Proj_Milestone_Columns_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_Proj_Milestone_Columns_Fieldset__c</fullName>
    <description>The API name of a custom field set used by the Milestone object. This field set defines the milestone from opportunity product columns that are read only during creation of a project from an opportunity using a template. No default field set is defined.</description>
    <inlineHelpText>The API name of a custom field set used by the Milestone object. This field set defines the milestone from opportunity product columns that are read only during creation of a project from an opportunity using a template. No default field set is defined.</inlineHelpText>
    <label>Milestone Opp Product (Tmpl) Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>