unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_RR_Fieldset__c</fullName>
    <defaultValue>'CreateProjectOpportunityRRColumns'</defaultValue>
    <description>The API name of a field set used by the Resource Request object. This field set defines the resource requests from opportunity columns displayed when creating a project from an opportunity.</description>
    <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the columns in Resource Request Mappings from Opportunity on the Create Project from Template page.</inlineHelpText>
    <label>Resource Request from Opp Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>