unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Resource_Skill_Request_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Skill_Request_Fieldset__c</fullName>
    <description>The API name of a field set used by the Resource Skill Request object. This field set defines the additional fields that are copied when adding resource requests from a template. No default field set is defined.</description>
    <inlineHelpText>The API name of the Resource Skill Request object field set that defines the fields that are copied when adding resource requests from a template.</inlineHelpText>
    <label>Resource Skill Request Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>