unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Meth_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Meth_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyProjMethFields'</defaultValue>
    <description>The API name of a field set used by the Project Methodology object. This field set defines the methodology fields (if associated methodologies exist) to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Methodology object. Fields in this set define the methodology fields (if associated methodologies exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Project Methodology Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>