unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_MS_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_MS_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyMilestoneFields'</defaultValue>
    <description>The API name of a field set used by the Milestone object. This field set defines the milestone fields (if associated milestones exist) to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Milestone object. Fields in this set define the milestone fields (if associated milestones exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Milestone Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>