unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Phase_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Phase_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyProjPhaseFields'</defaultValue>
    <description>The API name of a field set used by the Project Phase object. This field set defines the project phase fields (if associated project phases exist) to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Project Phase object. Fields in this set define the project phase fields (if associated project phases exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Project Phase Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>