unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Project_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Project_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyProjectFields'</defaultValue>
    <description>The API name of a field set used by the Project object. This field set defines additional project fields to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Project object. Fields in this field set define additional project fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Project Details Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>