unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Risk_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Risk_Fieldset__c</fullName>
    <description>The API name of a field set used by the Risk object. This set defines the risk fields (if associated risks exist) to copy from a template to a new project. These fields are not displayed during creation of the project. No default field set is defined.</description>
    <inlineHelpText>The API name of a field set used by the Risk object. Fields in this set define the Risk fields (if associated risks exist) to copy from a template to a new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Risk Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>