unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_RR_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyProjRRFields'</defaultValue>
    <description>The API name of a field set used by the Resource Request object. This set defines the resource request fields (if associated resource requests exist) to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the resource request fields (if associated requests exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Resource Request from Template Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>