unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Task_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Task_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTempAltCopyProjTaskFields'</defaultValue>
    <description>The API name of a field set used by the Project Task object. This set defines the project task fields (if associated tasks exist) to copy from a template to a new project. These fields are not displayed during creation of the project.</description>
    <inlineHelpText>API name of a field set used by the Project Task object. Fields in this set define the project task fields (if associated tasks exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Project Task Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>