unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Assignment_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Assignment_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTemplateAssignmentColumns'</defaultValue>
    <description>The API name of a field set used by the Assignment object. This field set defines the assignment fields that are editable when creating a project from a template.</description>
    <inlineHelpText>API name of a field set used by the Assignment object. Fields in this field set define the editable fields in the Assignments section of the Create Project from Template page.</inlineHelpText>
    <label>Assignment Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>