unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Columns_MS_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Columns_MS_Fieldset__c</fullName>
    <description>The API name of a field set used by the Milestone object. This field set defines the read only columns displayed during creation of a project when adding milestones from a template.</description>
    <inlineHelpText>Enter the API name of a Milestone object field set that defines the read-only fields shown in the Add Milestones from Template window.</inlineHelpText>
    <label>Milestone Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>