unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Columns_Phase_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Columns_Phase_Fieldset__c</fullName>
    <description>The API name of a field set used by the Project Phase object. This field set defines the read only columns displayed during creation of a project when adding project phases from a template.</description>
    <inlineHelpText>The API name of a field set used by the Project Phase object. This field set defines the read only columns displayed during creation of a project when adding project phases from a template.</inlineHelpText>
    <label>Project Phase Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>