unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Columns_Risk_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Columns_Risk_Fieldset__c</fullName>
    <description>The API name of a field set used by the Risk object. This field set defines the read only columns displayed during creation of a project when adding risks from a template.</description>
    <inlineHelpText>The API name of a field set used by the Risk object. This field set defines the read only columns displayed during creation of a project when adding risks from a template.</inlineHelpText>
    <label>Risk Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>