unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Columns_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Columns_RR_Fieldset__c</fullName>
    <description>The API name of a field set used by the Resource Request object. This field set defines the read only columns displayed during creation of a project when adding resource requests from a template.</description>
    <inlineHelpText>Enter the API name of a Resource Request object field set that defines the read-only fields shown in the Add Resource Requests from Template window.</inlineHelpText>
    <label>Resource Request from Template Read Only</label>
    <length>100</length>
    <type>Text</type>
</CustomField>