unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Copy_PTA_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Copy_PTA_Fieldset__c</fullName>
    <defaultValue>'CreateProjectFromTemplateCopyPTAFields'</defaultValue>
    <description>The API name of a field set used by the Project Task Assignment object. This field set defines additional project task assignment fields to copy from a template to a new project. These fields are not displayed during project creation.</description>
    <inlineHelpText>API name of a field set used by the Project Task Assignment object. Fields in this set define additional project task assignment fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Project Task Assignment Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>