unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Location_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Location_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTemplateLocationColumns'</defaultValue>
    <description>The API name of a field set used by the Project Location object. This field set defines the project location fields that are editable when creating a project from a template.</description>
    <inlineHelpText>API name of a field set used by the Project Location object. Fields in this field set define the editable fields in the Project Locations section of the Create Project from Template page.</inlineHelpText>
    <label>Project Location Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>