unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Risk_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Risk_Fieldset__c</fullName>
    <description>The API name of a field set used by the Risk object. This field set defines the risk mapping columns displayed during project creation when copying risk mappings from a template. No default field set is defined.</description>
    <inlineHelpText>The API name of a field set used by the Risk object. Fields in this set define the columns in the Risk Mappings from Template on the Create Project from Template page.</inlineHelpText>
    <label>Risk Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>