unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_RR_Fieldset__c</fullName>
    <defaultValue>'CreateProjectFromTemplateRRColumns'</defaultValue>
    <description>The API name of a field set used by the Resource Request object. This field set defines the editable columns displayed during project creation when creating a project from a template or adding resource requests from a template.</description>
    <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the columns in the Resource Request Mappings from Template on the Create Project from Template page.</inlineHelpText>
    <label>Resource Request from Template Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>