unpackaged/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Task_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Task_Fieldset__c</fullName>
    <defaultValue>'CreateProjFromTemplateTasksColumns'</defaultValue>
    <description>The API name of a field set used by the Project Task object. This field set defines the project task fields that are editable when creating a project from a template.</description>
    <inlineHelpText>API name of a field set used by the Project Task object. Fields in this field set define the editable fields in the Project Tasks section of the Create Project from Template page.</inlineHelpText>
    <label>Project Task Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>